Servidor para deploy

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 	<script src="scripts/quiz.js"></script>
 	<script src="scripts/creditos.js"></script>
 	<script src="scripts/questionsAnswers.js"></script>
+	<style>
+		body {
+			margin-top: 25px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	</style>
 </head>
 <body>
 
